Add position group CRUD and status filters